gcc/testsuite/rust/rustc/ui/entry-point/issue-118772_dg.rs
fn main(_: &i32) { // { dg-error ".E0580." "" { target *-*-* } }
    println!("Hello, world!");
}

